cldcvr-csp/config-root/cluster/deployment-must-have.yaml
# [START constraint]
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: deployment-must-have
spec:
  match:
    excludedNamespaces: ["cert-manager","kube-system","ingress-basic"]
    kinds:
      - apiGroups: ["apps"]
        kinds: ["Deployment"]
  parameters:
    labels:
      - key: "platform"
    message: "Deployment objects should have an 'platform' label indicating who created them."
# [END constraint]
