cldcvr-csp/config-root/cluster/httpsonly.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sHttpsOnly
metadata:
  name: ingress-https-only
spec:
  match:
    excludedNamespaces: ["cert-manager","kube-system","ingress-basic","gke-connect","gatekeeper-system","config-management-system","istio-system"]
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
