cldcvr-csp/config-root/cluster/podsalloweduser.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPAllowedUsers
metadata:
  name: user-must-be-3333
spec:
  enforcementAction: deny
  match:
    excludedNamespaces: ["cert-manager","kube-system","ingress-basic","gke-connect","gatekeeper-system","config-management-system"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
  parameters:
    runAsUser:
      rule: MustRunAs
      ranges:
        - min: 3333
          max: 3333
